--- a/src/app/Components/Widgets/sidebar/sidebar.component.html
+++ b/src/app/Components/Widgets/sidebar/sidebar.component.html
@@ -6,8 +6,8 @@
   <ul class="nav-list">
     <li><a routerLink="/home" routerLinkActive="active" (click)="closeSidebar()" class="nav-item"><i class="fas fa-home"></i> <span>Home</span></a></li>
     <li><a routerLink="/products" routerLinkActive="active" (click)="closeSidebar()" class="nav-item"><i class="fas fa-th-large"></i> <span>All Products</span></a></li>
+    <li><a href="dashboard/categories" class="nav-item"><i class="fas fa-tag"></i> <span>Category</span></a></li>
     <li><a href="#" class="nav-item"><i class="fas fa-fire"></i> <span>Trending</span></a></li>
-    <li><a href="#" class="nav-item"><i class="fas fa-tag"></i> <span>Best Deals</span></a></li>
     <li><a href="#" class="nav-item"><i class="fas fa-user-circle"></i> <span>My Account</span></a></li>
     <li><a href="#" class="nav-item"><i class="fas fa-cog"></i> <span>Settings</span></a></li>
   </ul>
