--- a/src/app/Components/Widgets/footer/footer.component.scss
+++ b/src/app/Components/Widgets/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: var(--text-color-dark);
+  background-color: var(--text-color-light);
   color: #a0a0a0;
   padding: 4rem 0 1rem;
 }
@@ -20,7 +20,7 @@
 
 .footer-column {
   h3 {
-    color: #fff;
+    color: #3a3ae1;
     margin-bottom: 1.5rem;
     font-size: 1.1rem;
     font-weight: 600;
