--- a/src/app/Components/Pages/category/categories-list/categories-list.component.html
+++ b/src/app/Components/Pages/category/categories-list/categories-list.component.html
@@ -1,8 +1,8 @@
 <div class="container page-fade-in">
   <header class="page-header">
     <h1>Manage Categories</h1>
-    <a routerLink="/dashboard/categories/new" class="btn btn-primary">
-      <i class="fas fa-plus"></i> Add New Category
+    <a routerLink="/addcategories" class="btn btn-primary">
+      <i  class="fas fa-plus"></i> Add New Category
     </a>
   </header>
 
@@ -25,7 +25,7 @@
             <td data-label="Description">{{ category.description }}</td>
             <td data-label="Created At">{{ category.createdAt | date:'medium' }}</td>
             <td data-label="Actions" class="actions-cell">
-              <a [routerLink]="['/dashboard/categories/edit', category.id]" class="action-btn edit" title="Edit">
+              <a [routerLink]="['/categories/edit', category.id]" class="action-btn edit" title="Edit">
                 <i class="fas fa-edit"></i>
               </a>
               <button (click)="openDeleteConfirmation(category.id)" class="action-btn delete" title="Delete">
