--- a/src/app/Components/Widgets/sidebar/sidebar.component.html
+++ b/src/app/Components/Widgets/sidebar/sidebar.component.html
@@ -6,7 +6,8 @@
   <ul class="nav-list">
     <li><a routerLink="/home" routerLinkActive="active" (click)="closeSidebar()" class="nav-item"><i class="fas fa-home"></i> <span>Home</span></a></li>
     <li><a routerLink="/products" routerLinkActive="active" (click)="closeSidebar()" class="nav-item"><i class="fas fa-th-large"></i> <span>All Products</span></a></li>
-    <li><a routerLink="/allcategories" class="nav-item"><i class="fas fa-tag"></i> <span>Category</span></a></li>
+    <li><a routerLink="/categories" class="nav-item"><i class="fas fa-tag"></i> <span>Category</span></a></li>
+    <li><a routerLink="/brands" class="nav-item"><i class="fas fa-tag"></i> <span>brands</span></a></li>
     <li><a routerLink="/register" class="nav-item"><i class="fas fa-user-circle"></i> <span>register</span></a></li>
     <li><a routerLink="/login" class="nav-item"><i class="fas fa-cog"></i> <span>login</span></a></li>
   </ul>
